Initialize Express Server

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "LeQuiz.io backend",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/EmileCalixte/lequiz.io/issues"
   },
-  "homepage": "https://github.com/EmileCalixte/lequiz.io#readme"
+  "homepage": "https://github.com/EmileCalixte/lequiz.io#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
