--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "admin",
+    "password": "admin",
+    "database": "lequiz-io",
+    "host": "database",
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
