--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     ports:
       - 80:3000
     command: "npm start"
+    stdin_open: true
 
   adminer:
     image: adminer:standalone
