--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/EmileCalixte/lequiz.io#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
