--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-fixtures": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
