--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "sequelize-fixtures": "^1.2.0"
+    "sequelize-fixtures": "^1.2.0",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
