--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'tests/**/*.js' --recursive --timeout 5000"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,13 @@
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "sequelize-cli": "^6.2.0"
+    "proxyquire": "^2.1.3",
+    "sequelize-cli": "^6.2.0",
+    "sequelize-test-helpers": "^1.3.2",
+    "sinon": "^9.2.2",
+    "sinon-chai": "^3.5.0"
   }
 }
