--- a/back-office/config/packages/security.yaml
+++ b/back-office/config/packages/security.yaml
@@ -1,7 +1,10 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+#        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
