--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
   back-office:
     build: ./back-office/Dockerfile
     image: lequiz-io:back-office
+    container_name: lequiz.io-back-office
     restart: always
     ports:
     - 8000:80
