--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
     - ./back-office:/app
     environment:
       WEB_DOCUMENT_ROOT: /app/public
+    command: sh -c "npm install --verbose && npm run watch"
 
   mailhog:
     image: mailhog/mailhog
