--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.4.18",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
