--- a/private-api/composer.json
+++ b/private-api/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "^8.0",
         "slim/slim": "^4.7",
-        "slim/psr7": "^1.3"
+        "slim/psr7": "^1.3",
+        "phpmailer/phpmailer": "^6.4"
     },
     "autoload": {
         "psr-4": {
