--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path')
 
 module.exports = {
-  'config': path.resolve('config', 'config.json'),
+  'config': path.resolve('config', 'dbConfig.js'),
   'models-path': path.resolve('models', 'dbModels'),
   'seeders-path': path.resolve('seeders'),
   'migrations-path': path.resolve('migrations')
