--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
     "argon2": "^0.27.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.18",
     "pg": "^8.4.0",
     "pg-hstore": "^2.3.3",
