--- a/back-office/composer.json
+++ b/back-office/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.8",
         "knplabs/knp-paginator-bundle": "^5.4",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "scienta/doctrine-json-functions": "^4.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
