--- a/back-office/package.json
+++ b/back-office/package.json
@@ -21,6 +21,7 @@
         "autoprefixer": "^10.2.5",
         "bootstrap": "^5.0.0-beta2",
         "node-sass": "^4.14.1",
-        "postcss-loader": "^5.2.0"
+        "postcss-loader": "^5.2.0",
+        "tom-select": "^1.7.1"
     }
 }
