--- a/back-office/package.json
+++ b/back-office/package.json
@@ -20,6 +20,7 @@
         "@popperjs/core": "^2.9.1",
         "autoprefixer": "^10.2.5",
         "bootstrap": "^5.0.0-beta2",
+        "bootstrap-icons": "^1.5.0",
         "node-sass": "^4.14.1",
         "postcss-loader": "^5.2.0",
         "tom-select": "^1.7.1"
