--- a/back-office/package.json
+++ b/back-office/package.json
@@ -23,6 +23,7 @@
         "bootstrap-icons": "^1.5.0",
         "node-sass": "^4.14.1",
         "postcss-loader": "^5.2.0",
-        "tom-select": "^1.7.1"
+        "tom-select": "^1.7.1",
+        "uuid": "^8.3.2"
     }
 }
