--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "fastest-levenshtein": "^1.0.12",
     "latinize": "^0.5.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
