Update .env model

--- a/back-office/.env
+++ b/back-office/.env
@@ -30,4 +30,5 @@ APP_SECRET=e621c87f258e3029d692132e6123f6f6
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://admin:admin@database:5432/lequiz-io?serverVersion=13&charset=utf8"
 PRIVATE_API_URL="PRIVATE_API_URL"
+FRONT_URL="FRONT_URL"
 ###< doctrine/doctrine-bundle ###
