--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
 
   mailhog:
     image: mailhog/mailhog
+    container_name: lequiz.io-mailhog
     ports:
       - 1025:1025
       - 8025:8025
