--- a/back-office/package.json
+++ b/back-office/package.json
@@ -24,6 +24,7 @@
         "flatpickr": "^4.6.9",
         "node-sass": "^4.14.1",
         "postcss-loader": "^5.2.0",
+        "toastr2": "^3.0.0-alpha.18",
         "uuid": "^8.3.2"
     }
 }
