Use new sql file for script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: lequiz.io-database
     restart: always
     volumes:
-      - ./sql/import.sql:/docker-entrypoint-initdb.d/import.sql
+      - ./sql/prod.sql:/docker-entrypoint-initdb.d/import.sql
     environment:
       POSTGRES_DB: lequiz-io
       POSTGRES_USER: admin
